NOTICKET: Fix wrapping of toggle buttons in ear-training

--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -26,6 +26,7 @@
 }
 
 .EarTrainingDisplay-radioGroup {
+  display: flex !important;
   margin: 15px auto 0 auto !important;
   max-width: fit-content;
 }
